crates/alba-tui/tests/snapshots/render__a_copy_selection_highlights_the_span.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build ── ▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 0/1 · 0.0s ──────────────────────────────┐"
"│BEAMS                         │LOGS                                ● following│"
"│ ▶ build                 0.0s…│alpha                                          │"
"│                              │bravo                                          │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│✔ 0  ⚡ 0  ✖ 0  ○ 0           │                                               │" Hidden by multi-width symbols: [(7, " ")]
"└─ hjkl/arrows move · v anchor · y copy · Esc cancel ──────────────────────────┘"
