crates/alba-tui/tests/snapshots/render__a_failed_run_renders_the_cross_and_summary_counts.snap
---
source: crates/alba-tui/tests/render.rs
assertion_line: 123
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build finished · ✖ 1 · 0.5s ─────────────────────────────────────┐"
"│BEAMS                         │logs · build                                   │"
"│ ✖ build                  0.5s│                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│✔ 0  ⚡ 0  ✖ 1  ○ 0           │● following                                    │" Hidden by multi-width symbols: [(7, " ")]
"└─ q quit · r rerun · f force · c cancel · w watch ────────────────────────────┘"
