crates/alba-tui/tests/snapshots/render__a_long_beam_name_is_truncated_in_the_tree.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build ── ▰▰▰▰▰▰▰▱▱▱▱▱▱▱ 1/2 · 0.0s ──────────────────────────────┐"
"│BEAMS                         │LOGS                                ● following│"
"│ ✔ services:payment:i…    1.2s│                                               │"
"│ ○ build                      │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"├──────────────────────────────┴───────────────────────────────────────────────┤"
"│ ✔ 1  ⚡ 0  ✖ 0  ○ 1                ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 1/2 · 0.0s │" Hidden by multi-width symbols: [(8, " ")]
"└─ q quit · r rerun · c cancel · w watch · / search · ? help ──────────────────┘"
