crates/alba-tui/tests/snapshots/render__a_long_log_line_wraps_in_the_pane.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build ── ▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 0/1 · 0.0s ──────────────────────────────┐"
"│BEAMS                         │LOGS                                ● following│"
"│ ▶ build                 0.0s…│xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│"
"│                              │xxxxxxxxxxxxx                                  │"
"│                              │tail                                           │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│✔ 0  ⚡ 0  ✖ 0  ○ 0           │                                               │" Hidden by multi-width symbols: [(7, " ")]
"└─ q quit · r rerun · c cancel · w watch · / search · ? help ──────────────────┘"
