crates/alba-tui/tests/snapshots/render__a_run_in_flight_renders_at_the_forty_column_floor.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 40, 12)"
---
"┌─ alba · build ───────────────────────┐"
"│BEAMS                         │LOGS   │"
"│ ✔ codegen                1.2s│       │"
"│ ▶ build                 0.0s…│       │"
"│                              │       │"
"│                              │       │"
"│                              │       │"
"│                              │       │"
"│                              │       │"
"├──────────────────────────────┴───────┤"
"│ ✔ 1  ⚡ 0  ✖ 0  ○ 0       1/2 · 0.0s │" Hidden by multi-width symbols: [(8, " ")]
"└─ q quit · r rerun · c cancel · w watc┘"
