crates/alba-tui/tests/snapshots/render__a_run_in_flight_renders_tree_bar_and_logs.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build ── ▰▰▰▰▰▰▱▱▱▱▱▱▱▱ 2/5 · 0.0s ──────────────────────────────┐"
"│BEAMS                         │logs · api:build                               │"
"│ ✔ codegen                1.2s│Compiling api v0.1.0                           │"
"│ ⚡ api:codegen           0.8s│                                               │" Hidden by multi-width symbols: [(3, " ")]
"│ ▶ api:build             0.0s…│                                               │"
"│ ○ build                      │                                               │"
"│ ○ test                       │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│✔ 1  ⚡ 1  ✖ 0  ○ 2           │● following                                    │" Hidden by multi-width symbols: [(7, " ")]
"└─ q quit · r rerun · f force · c cancel · w watch · n next · N prev ──────────┘"
