crates/alba-tui/tests/snapshots/render__a_search_highlights_and_counts_matches.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run build ── ▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 0/1 · 0.0s ──────────────────────────────┐"
"│BEAMS                         │logs · build                                   │"
"│ ▶ build                 0.0s…│line 0                                         │"
"│                              │line 1                                         │"
"│                              │line 2                                         │"
"│                              │line 3                                         │"
"│                              │line 4                                         │"
"│                              │line 5                                         │"
"│                              │line 6                                         │"
"│                              │line 7                                         │"
"│                              │line 8                                         │"
"│                              │line 9                                         │"
"│                              │ERROR one                                      │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│✔ 0  ⚡ 0  ✖ 0  ○ 0           │↑ paused                                       │" Hidden by multi-width symbols: [(7, " ")]
"└─ /error · 1/2 · n next · N prev · Esc done ──────────────────────────────────┘"
