crates/alba-tui/tests/snapshots/render__a_tiny_terminal_gets_the_too_small_screen.snap
---
source: crates/alba-tui/tests/render.rs
assertion_line: 141
expression: "drawn(&state, 30, 8)"
---
"terminal too small (need at le"
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
