crates/alba-tui/tests/snapshots/render__a_waiting_session_renders_the_watch_state.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · build ─────────────────────────────────────────── watching 42 files ─┐"
"│BEAMS                         │LOGS                                ● following│"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"│                              │                                               │"
"├──────────────────────────────┴───────────────────────────────────────────────┤"
"│ ✔ 0  ⚡ 0  ✖ 0  ○ 0                                                     idle │" Hidden by multi-width symbols: [(8, " ")]
"└─ q quit · r rerun · c cancel · w watch · / search · ? help ──────────────────┘"
